--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,6 +11,7 @@ en:
         email_title: "%A, %d %b at %H:%M"
         short: "%d/%m/%Y %H:%M "
         date: "%d %B %Y"
+        website_format: "%A, %d %B %Y at %H:%M"
 
   messages:
     accepted_invitation: "Thanks for getting back to us %{name}. See you at the session!"
