--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,4 @@ en:
     not_attending_already: "You have alredy confirmed you can't make it!"
     no_available_seats: "Unfortunately there are no more spaces left :(. If you would like to join our waiting list send us an email at meetings@codebar.io."
     member_notifications: "You will be receiving notifications for: %{roles}"
-    no_roles: "You have not signed up for any notifications. If you change your mind, send us an email at meetins@codebar.io so we can change your settings"
+    no_roles: "You have not selected any roles so you won't be receiving any notifications. If you change your mind, send us an email at hello@codebar.io so we can change your settings."
