text tweaks on feedback email and form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,8 +24,8 @@ en:
     no_available_seats: "Unfortunately there are no more spaces left :(. If you would like to join our waiting list send us an email at meetings@codebar.io."
     member_notifications: "You will be receiving notifications for: %{roles}"
     no_roles: "You have not selected any roles so you won't be receiving any notifications. If you change your mind, send us an email at hello@codebar.io so we can change your settings."
-    feedback_saved: "Feedback was successfully submited. Thank you!"
-    feedback_not_found: "Sorry, feedback is already submited or link does not exists."
+    feedback_saved: "Thank you for taking the time to give us feedback!"
+    feedback_not_found: "You have already submitted feedback for this event."
 
   notifications:
     provider_already_connected: 'You are already signed in!'
