change date format across website

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,7 +11,9 @@ en:
         email_title: "%A, %d %b at %H:%M"
         short: "%d/%m/%Y %H:%M "
         date: "%d %B %Y"
-        website_format: "%A, %d %B %Y at %H:%M"
+        website_format: "%a, %d %B %Y at %H:%M"
+        day_in_words: "%a"
+        day: "%d"
         month: "%B"
         meeting_format: "%a %d %B %H:%M"
         time: "%H:%M"
