--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -60,6 +60,21 @@ en:
     tweets_by: "Tweets by"
     latest_sponsors: "Latest Sponsors"
 
+    policy:
+      intro: "There’s high demand for our workshops and we have a waiting list on most weeks. To make sure as many people as possible can come, we have a straightforward attendance policy."
+      rule1: "Before you RSVP make sure you are eligible to attend. If you’re not sure get in touch for a chat."
+      rule2: "You must sign up and RSVP to attend our workshops."
+      rule3: "If you RSVP then later realise you can’t make it, you must cancel. It only takes a few seconds to do through your confirmation email."
+      rule4: "Please try to cancel with at least 24 hours notice."
+      rule5: "We know that sometimes things come up last minute, but even if you only cancel an hour before the session, get in touch and let us know."
+      what_happens: "What happens if I don’t respect the policy?"
+      strikes_system: "We operate a three strikes system. That means if you don’t come in without cancelling an RSVP three times, we will take you off our invite list for four weeks. We’ll get in touch after your first absence to make sure you understand this."
+      removing: "If you fail to attend without cancelling another three times, we might have to remove you permanently from our invitation list."
+      rsvping: "There is no penalty for RSVP-ing and then cancelling on a regular basis, but please avoid it. If you always struggle to make it in on a certain day then let us know – that kind of feedback is really important to us."
+      eligibility_note: "Another note on eligibility"
+      abuse: "We’re a fairly relaxed bunch and we trust you, so we don’t police students as to their eligibility. However if it ever looks like this is being abused we may have to change that – which we really don’t want to do."
+      reminder: "So please remember what these workshops are for – to open up tech to people that are underrepresented in the industry."
+
   events:
     no_upcoming_events: "There are no upcoming events."
     view_past_events: "View past events"
