--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -93,11 +93,14 @@ en:
       suggestions: "Do you have something to suggest? Make a <a href='https://github.com/codebar/planner'>pull request</a> or <a href='https://github.com/codebar/planner/issues/new'>create an issue</a>"
 
   events:
+    title: "Events"
+    past: "Past"
     no_upcoming_events: "There are no upcoming events."
     view_past_events: "View past events"
     view_all: "View all"
     kindly_hosted_by: "Kindly hosted by"
     organisers: "organisers"
+    venue_at: "at"
 
   coaches:
     want_to_coach: "Do you want to coach at our workshops?"
