--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -101,7 +101,7 @@ en:
     kindly_hosted_by: "Kindly hosted by"
     organisers: "organisers"
     venue_at: "at"
-    os_get_started: "Get started with Open Source!"
+    attend_as_student: "Attend as a student"
     attend_as_coach: "Attend as a coach"
     location: "Location"
     sponsors: "Sponsors"
