update admin workshop management

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -230,4 +230,4 @@ en:
   admin:
     workshop:
       manage_rsvps:
-        text: 'RSVP Students and Coaches to the workshop. The attendance confirmation email will be trigerred and they will be remove them from the waiting list.'
+        text: 'RSVP Students and Coaches to the workshop. The attendance confirmation email will be trigerred and they will be removed from the waiting list.'
