--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -222,8 +222,8 @@ en:
       a_p2: ". They are ordered by number of attendances. This is our way of showing our appreciation to them, as without them, we wouldn't be able to exist."
 
   chapters:
-    intro: "Our workshops are open to anyone under-represented in the tech industry, but places are limited."
-    sign_up: "to receive invitations to our upcoming workshops."
+    intro: "Places for our workshops are limited so please RSVP if you would like to attend."
+    sign_up: "to be invited to our workshops."
     no_incoming: "There are no workshops coming up."
     contact: "To contact the %{city} team, send an email to %{email}"
 
