include all links in footer

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,8 @@ en:
     coach_guide: "Coach guide"
     tutorials: "Tutorials"
     becoming_sponsor: "Becoming a sponsor"
+    faq: "FAQ"
+    blog: "Blog"
 
   dashboard:
     join_workshops_in: "Join our <i>free weekly</i> workshops in"
