Extracts workshop destroy related status messages into a locale
Extracting the text into a locale makes things look more concise and if
the text needs to change in the future, the same can be done from just
one location.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -234,3 +234,6 @@ en:
     workshop:
       manage_rsvps:
         text: 'RSVP Students and Coaches to the workshop. The attendance confirmation email will be triggered and they will be removed from the waiting list.'
+      destroy:
+        success: "Workshop deleted successfully"
+        failure: "Workshop cannot be deleted. This is because it has invitees and/or workshop information is on the website for a while long enough that it cannot be deleted."
