Update job listings to match new layout… add feature to verify listed jobs add scopes to enable easy retrieval of jobs at different states

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,6 +25,7 @@ en:
         email_title: "%A, %d %b at %H:%M"
         short: "%d/%m/%Y %H:%M "
         date: "%d %b %Y"
+        default_date: "%d/%m/%Y"
         website_format: "%a, %d %B %Y at %H:%M"
         day_in_words: "%a"
         day: "%d"
