--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -62,7 +62,7 @@ en:
     blog: "Blog"
 
   dashboard:
-    join_workshops_in: "Join our <i>free weekly</i> workshops in"
+    join_workshops_in: "Join our <i>free</i> workshops in"
     workshops_goal: "to get to grips with the basics of programming and web development."
     tweets_by: "Tweets by"
     latest_sponsors: "Latest Sponsors"
