Move member/job relevant actions to member/jobs controller Member can find any jobs they listed under /my/jobs and create jobs at /my/jobs/new

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -248,10 +248,17 @@ en:
     index:
       description: There are %{count} jobs listed
       none: There are no jobs available.
-    pending:
-      title: Your pending job posts
-      description: You have %{count} job posts pending submission.
-      none: You have no pending job posts.
+
+  member:
+    jobs:
+      title: Your job posts
+      index:
+        description: You have %{count} jobs listed
+        none: You have not posted any jobs
+      pending:
+        title: Your pending job posts
+        description: You have %{count} job posts pending submission.
+        none: You have no pending job posts.
 
   admin:
     workshop:
